--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Explore</div>
+                                <div class="portfolio-caption-heading">Skeleton</div>
                                 <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
                             </div>
                         </div>
@@ -439,7 +439,7 @@
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
-                                            Explore
+                                            Skeleton
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
