--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Lines</div>
+                                <div class="portfolio-caption-heading">Outcast</div>
                                 <div class="portfolio-caption-subheading text-muted">Branding</div>
                             </div>
                         </div>
@@ -509,7 +509,7 @@
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
-                                            Lines
+                                            Outcast
                                         </li>
                                         <li>
                                             <strong>Category:</strong>
