--- a/index.html
+++ b/index.html
@@ -281,7 +281,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="row">
+                    <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
                             <h4>Antonio Ponce</h4>
@@ -291,8 +292,7 @@
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
-                </div>
-            <div class="col-lg-4">
+                    <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
                             <h4>David</h4>
@@ -302,8 +302,7 @@
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
-                </div>
-            <div class="col-lg-4">
+                    <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
                             <h4>Antonio López</h4>
