--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="..." /></a>
+                <a class="navbar-brand" href="#page-top"><img src="assets/img/logo.png" alt="..." /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#projectPaintball">Project Paintball</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Agents</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
@@ -39,17 +39,17 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">This is PsyCoffin!</div>
-                <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
+                <div class="masthead-subheading">Somos PsyCoffin</div>
+                <div class="masthead-heading text-uppercase">¡Gracias por visitarnos!</div>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Conócenos</a>
             </div>
         </header>
         <!-- Services-->
-        <section class="page-section" id="services">
+        <section class="page-section" id="projectPaintball">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Project Paintball</h2>
+                    <h3 class="section-subheading text-muted">Nuestro primer gran videojuego.</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -57,24 +57,24 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">E-Commerce</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Shooter 3v3</h4>
+                        <p class="text-muted">Project Paintball es un videojuego Shooter donde dos equipos de 3 jugadores competirán entre ellos en varios modos de juego.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Responsive Design</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Competitivo</h4>
+                        <p class="text-muted">Buscamos un enfoque centrado en la parte competitiva del género, perfecto para mejorar tu habilidad.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Web Security</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Táctico</h4>
+                        <p class="text-muted">El trabajo en equipo y capacidad de toma de elecciones es esencial para conseguir la victoria.</p>
                     </div>
                 </div>
             </div>
@@ -205,18 +205,18 @@
                                 <h4>Octubre 2019</h4>
                                 <h4 class="subheading">Primer prototipo del juego</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Tras un mes de trabajo, se completa lo que conocemos como la versión prototipo de nuestro primer juego: Proyect Paintball...</p></div>
+                            <div class="timeline-body"><p class="text-muted">Tras un mes de trabajo, se completa lo que conocemos como la versión prototipo de nuestro primer juego: ¡Proyect Paintball!</p></div>
                         </div>
                     </li>
-                    //Seguir introducuiendo eventos a medida que ocurran cosas
+                    <!-- SEGUIR INTRODUCIOENDO COSAS A MEDIDA QUE VAYAMOS AVANZANDO-->
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
-                                Be Part
+                                ¡Gracias
                                 <br />
-                                Of Our
+                                Por Vuestro
                                 <br />
-                                Story!
+                                Apoyo!
                             </h4>
                         </div>
                     </li>
