--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#projectPaintball">Project Paintball</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Agents</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#colaboradores">Colaboradores</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
@@ -80,11 +80,11 @@
             </div>
         </section>
         <!-- Portfolio Grid-->
-        <section class="page-section bg-light" id="portfolio">
+        <section class="page-section bg-light" id="colaboradores">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Agents</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Colaboradores</h2>
+                    <h3 class="section-subheading text-muted">A continuación están todas las compañías que colaboran con nosotros.</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -94,11 +94,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/action_live_1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Joker</div>
-                                <div class="portfolio-caption-subheading text-muted">Chaos</div>
+                                <div class="portfolio-caption-heading">Action Live</div>
+                                <div class="portfolio-caption-subheading text-muted">Paintball en Madrid</div>
                             </div>
                         </div>
                     </div>
@@ -109,11 +109,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/paintball_madrid_1.webp" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Skeleton</div>
-                                <div class="portfolio-caption-subheading text-muted">Stealth</div>
+                                <div class="portfolio-caption-heading">Paintball Madrid</div>
+                                <div class="portfolio-caption-subheading text-muted">Paintball en Madrid</div>
                             </div>
                         </div>
                     </div>
@@ -124,11 +124,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/evasion_1.webp" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Witch</div>
-                                <div class="portfolio-caption-subheading text-muted">Escapism</div>
+                                <div class="portfolio-caption-heading">Evasion Paintball</div>
+                                <div class="portfolio-caption-subheading text-muted">Paintball en Madrid</div>
                             </div>
                         </div>
                     </div>
