--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/action_live_1.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/action_live_1.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Action Live</div>
