--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <!-- Portfolio item 1-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
-                                <img class="img-fluid" src="assets/img/portfolio/action_live_1.png" alt="..." />
+                                <img class="mx-auto rounded-circle" src="assets/img/portfolio/action_live_1.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Action Live</div>
@@ -103,7 +103,7 @@
                         <!-- Portfolio item 2-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
-                                <img class="img-fluid" src="assets/img/portfolio/paintball_madrid_1.webp" alt="..." />
+                                <img class="mx-auto rounded-circle" src="assets/img/portfolio/paintball_madrid_1.webp" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Paintball Madrid</div>
@@ -115,7 +115,7 @@
                         <!-- Portfolio item 3-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
-                                <img class="img-fluid" src="assets/img/portfolio/evasion_1.webp" alt="..." />
+                                <img class="mx-auto rounded-circle" src="assets/img/portfolio/evasion_1.webp" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Evasion Paintball</div>
