--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
                                 <img class="mx-auto rounded-circle" src="assets/img/portfolio/evasion_1.webp" alt="..." />
                             </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Evasion Paintball</div>
-                                <div class="portfolio-caption-subheading text-muted">Paintball en Madrid</div>
+                            <div class="team-member">
+                                <h4>Evasion Paintball</h4>
+                                <p class="text-muted">Paintball en Madrid</p>
                             </div>
                         </div>
                     </div>
