--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
                                 <img class="mx-auto rounded-circle" src="assets/img/portfolio/action_live_1.png" alt="..." />
                             </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Action Live</div>
-                                <div class="portfolio-caption-subheading text-muted">Paintball en Madrid</div>
+                            <div class="team-member">
+                                <h4>Action Live</h4>
+                                <p class="text-muted">Paintball en Madrid</p>
                             </div>
                         </div>
                     </div>
@@ -105,9 +105,9 @@
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
                                 <img class="mx-auto rounded-circle" src="assets/img/portfolio/paintball_madrid_1.webp" alt="..." />
                             </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Paintball Madrid</div>
-                                <div class="portfolio-caption-subheading text-muted">Paintball en Madrid</div>
+                            <div class="team-member">
+                                <h4>Paintball Madrid</h4>
+                                <p class="text-muted">Paintball en Madrid</p>
                             </div>
                         </div>
                     </div>
@@ -127,44 +127,35 @@
                         <!-- Portfolio item 4-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="..." />
+                                <img class="mx-auto rounded-circle" src="assets/img/portfolio/paintball_sports_1.jpg" alt="..." />
                             </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Outcast</div>
-                                <div class="portfolio-caption-subheading text-muted">Control</div>
+                            <div class="team-member">
+                                <h4>Paintball Sports</h4>
+                                <p class="text-muted">Tienda Online de Paintball</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
                         <!-- Portfolio item 5-->
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="..." />
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
+                                <img class="mx-auto rounded-circle" src="assets/img/portfolio/megacampo_1.jpeg" alt="..." />
                             </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Southwest</div>
-                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                            <div class="team-member">
+                                <h4>Megacampo</h4>
+                                <p class="text-muted">Paintball en Madrid</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/6.jpg" alt="..." />
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
+                                <img class="mx-auto rounded-circle" src="assets/img/portfolio/justpaintball_1.png" alt="..." />
                             </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Window</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
+                            <div class="team-member">
+                                <h4>JustPaintball</h4>
+                                <p class="text-muted">Tienda Online de Paintball</p>
                             </div>
                         </div>
                     </div>
