--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Colaboradores</h2>
-                    <h3 class="section-subheading text-muted">A continuación están todas las compañías que colaboran con nosotros.</h3>
+                    <h3 class="section-subheading text-muted">A continuación se encuentran todas las compañías que colaboran con nosotros.</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
