--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <!-- Portfolio item 1-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
-                                <img class="mx-auto rounded-circle" src="assets/img/portfolio/action_live_1.png" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/action_live_1.png" alt="..." />
                             </a>
                             <div class="team-member">
                                 <h4>Action Live</h4>
@@ -103,7 +103,7 @@
                         <!-- Portfolio item 2-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
-                                <img class="mx-auto rounded-circle" src="assets/img/portfolio/paintball_madrid_1.webp" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/paintball_madrid_1.webp" alt="..." />
                             </a>
                             <div class="team-member">
                                 <h4>Paintball Madrid</h4>
@@ -115,7 +115,7 @@
                         <!-- Portfolio item 3-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
-                                <img class="mx-auto rounded-circle" src="assets/img/portfolio/evasion_1.webp" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/evasion_1.webp" alt="..." />
                             </a>
                             <div class="team-member">
                                 <h4>Evasion Paintball</h4>
@@ -127,7 +127,7 @@
                         <!-- Portfolio item 4-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-                                <img class="mx-auto rounded-circle" src="assets/img/portfolio/paintball_sports_1.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/paintball_sports_1.jpg" alt="..." />
                             </a>
                             <div class="team-member">
                                 <h4>Paintball Sports</h4>
@@ -139,7 +139,7 @@
                         <!-- Portfolio item 5-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-                                <img class="mx-auto rounded-circle" src="assets/img/portfolio/megacampo_1.jpeg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/megacampo_1.jpeg" alt="..." />
                             </a>
                             <div class="team-member">
                                 <h4>Megacampo</h4>
@@ -151,7 +151,7 @@
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-                                <img class="mx-auto rounded-circle" src="assets/img/portfolio/justpaintball_1.png" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/justpaintball_1.png" alt="..." />
                             </a>
                             <div class="team-member">
                                 <h4>JustPaintball</h4>
