--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
                         <!-- Portfolio item 1-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
-                                <img class="img-fluid" src="assets/img/portfolio/action_live_1.png" alt="..." />
+                                <div>
+                                   <img class="img-fluid" src="assets/img/portfolio/action_live_1.png" alt="..." /> 
+                                </div>
                             </a>
                             <div class="team-member">
                                 <h4>Action Live</h4>
