--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <!-- Portfolio item 1-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
-                                <div>
+                                <div class="row text-center">
                                    <img class="img-fluid" src="assets/img/portfolio/action_live_1.png" alt="..." /> 
                                 </div>
                             </a>
