--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
                         <!-- Portfolio item 2-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
-                                <img class="img-fluid" src="assets/img/portfolio/paintball_madrid_1.webp" alt="..." />
+                                <div class="row text-center">
+                                    <img class="img-fluid" src="assets/img/portfolio/paintball_madrid_1.webp" alt="..." />
+                                </div>
                             </a>
                             <div class="team-member">
                                 <h4>Paintball Madrid</h4>
@@ -117,7 +119,9 @@
                         <!-- Portfolio item 3-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
-                                <img class="img-fluid" src="assets/img/portfolio/evasion_1.webp" alt="..." />
+                                <div class="row text-center">
+                                    <img class="img-fluid" src="assets/img/portfolio/evasion_1.webp" alt="..." />
+                                </div>
                             </a>
                             <div class="team-member">
                                 <h4>Evasion Paintball</h4>
@@ -129,7 +133,9 @@
                         <!-- Portfolio item 4-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-                                <img class="img-fluid" src="assets/img/portfolio/paintball_sports_1.jpg" alt="..." />
+                                <div class="row text-center">
+                                    <img class="img-fluid" src="assets/img/portfolio/paintball_sports_1.jpg" alt="..." />
+                                </div>
                             </a>
                             <div class="team-member">
                                 <h4>Paintball Sports</h4>
@@ -141,7 +147,9 @@
                         <!-- Portfolio item 5-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-                                <img class="img-fluid" src="assets/img/portfolio/megacampo_1.jpeg" alt="..." />
+                                <div class="row text-center">
+                                    <img class="img-fluid" src="assets/img/portfolio/megacampo_1.jpeg" alt="..." />
+                                </div>
                             </a>
                             <div class="team-member">
                                 <h4>Megacampo</h4>
@@ -153,7 +161,9 @@
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-                                <img class="img-fluid" src="assets/img/portfolio/justpaintball_1.png" alt="..." />
+                                <div class="row text-center">
+                                    <img class="img-fluid" src="assets/img/portfolio/justpaintball_1.png" alt="..." />
+                                </div>
                             </a>
                             <div class="team-member">
                                 <h4>JustPaintball</h4>
