--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                         <a href="https://psycoffin-studios.github.io"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/google.svg" alt="..." aria-label="Google Logo" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/twitter.svg" alt="..." aria-label="IBM Logo" /></a>
+                        <a href="https://x.com/PsyCoffin"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/twitter.svg" alt="..." aria-label="IBM Logo" /></a>
                     </div>
                 </div>
             </div>
