--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
-                <div class="row align-items-center">
+                <div class="text-center">
                     <div class="col-lg-4 text-lg-start">Copyright &copy; PsyCoffin 2024</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="https://x.com/PsyCoffin?t=OkLCqS6poVZYnaAX5Na62Q&sK=09" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
