--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                         <li class="nav-item"><a class="nav-link" href="#projectPaintball">Project Paintball</a></li>
                         <li class="nav-item"><a class="nav-link" href="#colaboradores">Colaboradores</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">Historia</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#team">Equipo</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
                     </ul>
                 </div>
             </div>
@@ -314,8 +314,8 @@
         <section class="page-section" id="contact">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Contacta con nosotros</h2>
+                    <h3 class="section-subheading text-muted">Para cualquier duda o sugerencia, ¡somos todo oídos!.</h3>
                 </div>
                 <!-- * * * * * * * * * * * * * * *-->
                 <!-- * * SB Forms Contact Form * *-->
