--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         </section>
         <!-- Clients-->
         <div class="py-5">
-            <div class="container">
+            <div class="row align-items-center">
                 <div class="row align-items-center">
                     <div class="col-md-3 col-sm-6 my-3">
                         <a href="https://www.youtube.com/@PsyCoffinStudios"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/youtube.svg" alt="..." aria-label="Microsoft Logo" /></a>
@@ -377,7 +377,7 @@
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
-                <div class="text-center">
+                <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-start">Copyright &copy; PsyCoffin 2024</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="https://x.com/PsyCoffin?t=OkLCqS6poVZYnaAX5Na62Q&sK=09" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
