--- a/index.html
+++ b/index.html
@@ -264,8 +264,7 @@
                             <h4>Antonio Ponce</h4>
                             <p class="text-muted">Programador</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/antonio-ponce-hurtado-5124791a4/?originalSubdomain=es" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -274,8 +273,7 @@
                             <h4>David Garde</h4>
                             <p class="text-muted">Artista 3D</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/ddaved__?igsh=MXRrNjE4NXFic2xveA==" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
