--- a/index.html
+++ b/index.html
@@ -231,9 +231,8 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/NoahJoseph.jpg" alt="..." />
                             <h4>Noah Joseph</h4>
                             <p class="text-muted">Compositor Sonido y Música</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://x.com/sirenejota" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/sirenejota?igsh=MWh4MTQ3emZ3MDJ2cQ==" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
