--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                 <h4>Octubre 2019</h4>
                                 <h4 class="subheading">Primer prototipo del juego</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Tras un mes de trabajo, se completa lo que conocemos como la versión prototipo de nuestro primer juego: ¡Proyect Paintball!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Tras un mes de trabajo, se completa lo que conocemos como la versión prototipo de nuestro primer juego: ¡Project Paintball!</p></div>
                         </div>
                     </li>
                     <!-- SEGUIR INTRODUCIOENDO COSAS A MEDIDA QUE VAYAMOS AVANZANDO-->
