--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/JaimeLleras.jpg" alt="..." />
                             <h4>Jaime Lleras</h4>
                             <p class="text-muted">Artista 2D</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://x.com/_cheis_?t=HYgYkj-4Ccyw8A3napnPqQ&s=09" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-twitter"></i></a>
