--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                            <img class="mx-auto rounded-circle" src="assets/img/iconos web/3v3_white.png" alt="..." />
                         </span>
                         <h4 class="my-3">Shooter 3v3</h4>
                         <p class="text-muted">Project Paintball es un videojuego Shooter donde dos equipos de 3 jugadores competirán entre ellos en varios modos de juego.</p>
@@ -63,7 +63,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+                            <img class="mx-auto rounded-circle" src="assets/img/iconos web/competitive.png" alt="..." />
                         </span>
                         <h4 class="my-3">Competitivo</h4>
                         <p class="text-muted">Buscamos un enfoque centrado en la parte competitiva del género, perfecto para mejorar tu habilidad.</p>
@@ -71,7 +71,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+                            <img class="mx-auto rounded-circle" src="assets/img/iconos web/3v3_tactical.png" alt="..." />
                         </span>
                         <h4 class="my-3">Táctico</h4>
                         <p class="text-muted">El trabajo en equipo y capacidad de toma de elecciones es esencial para conseguir la victoria.</p>
