--- a/index.html
+++ b/index.html
@@ -53,25 +53,23 @@
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <img class="mx-auto rounded-circle" src="assets/img/iconos web/3v3_white.png" alt="..." />
+                        <span class="fa-stack fa-4x" style="margin-bottom: 20px;">
+                            <img class="img-fluid" src="assets/img/iconos web/3v3.png" alt="..." style="width: 100%; height: auto;"/>
                         </span>
                         <h4 class="my-3">Shooter 3v3</h4>
                         <p class="text-muted">Project Paintball es un videojuego Shooter donde dos equipos de 3 jugadores competirán entre ellos en varios modos de juego.</p>
                     </div>
                     <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <img class="mx-auto rounded-circle" src="assets/img/iconos web/competitive.png" alt="..." />
+                        <span class="fa-stack fa-4x" style="margin-bottom: 20px;">
+                            <img class="img-fluid" src="assets/img/iconos web/competitive_black.png" alt="..." style="width: 100%; height: auto;"/>
                         </span>
+                        
                         <h4 class="my-3">Competitivo</h4>
                         <p class="text-muted">Buscamos un enfoque centrado en la parte competitiva del género, perfecto para mejorar tu habilidad.</p>
                     </div>
                     <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <img class="mx-auto rounded-circle" src="assets/img/iconos web/3v3_tactical.png" alt="..." />
+                        <span class="fa-stack fa-4x" style="margin-bottom: 20px;">
+                            <img class="img-fluid" src="assets/img/iconos web/tactical_black.png" alt="..." style="width: 100%; height: auto;"/>
                         </span>
                         <h4 class="my-3">Táctico</h4>
                         <p class="text-muted">El trabajo en equipo y capacidad de toma de elecciones es esencial para conseguir la victoria.</p>
@@ -187,7 +185,7 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/logo_psycoffin_idea.png" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Septiembre 2019</h4>
+                                <h4>Septiembre 2024</h4>
                                 <h4 class="subheading">Creación del estudio</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">El 17 de Septiembre se crea oficialmente el estudio de PsyCoffin. 6 jóvenes con un proyecto en mente...</p></div>
@@ -197,7 +195,7 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/LogoJuego.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Octubre 2019</h4>
+                                <h4>Octubre 2024</h4>
                                 <h4 class="subheading">Primer prototipo del juego</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">Tras un mes de trabajo, se completa lo que conocemos como la versión prototipo de nuestro primer juego: ¡Project Paintball!</p></div>
