--- a/index.html
+++ b/index.html
@@ -306,6 +306,9 @@
                     <div class="col-md-3 col-sm-6 my-3">
                         <a href="https://x.com/PsyCoffin"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/twitter.svg" alt="..." aria-label="IBM Logo" /></a>
                     </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <a href="https://discord.gg/bZ8gdfcEz4"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/discordlogo.svg" alt="..." aria-label="IBM Logo" /></a>
+                    </div>
                 </div>
             </div>
         </div>
