--- a/index.html
+++ b/index.html
@@ -320,9 +320,8 @@
                 </div>
 
                 <div class="row align-items-stretch mb-5">
-                        <div class="col-md-6">
-                            ¡Escribidnos en nuestro servidor oficial de discord a continuación!
-
+                        <div class="row align-items-center">
+                            <h4>¡Escribidnos en nuestro servidor oficial de discord a continuación!</h4>
                             <a href="https://discord.gg/bZ8gdfcEz4" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Únete y habla con nosotros</a>
                         </div>
                 </div>
