--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
                 <div class="row align-items-stretch mb-5">
                         <div class="row align-items-center">
-                            <h4>¡Escribidnos en nuestro servidor oficial de discord a continuación!</h4>
+                            <h3 class="section-subheading text-muted">¡Escribidnos en nuestro servidor oficial de discord a continuación!</h3>
                             <a href="https://discord.gg/bZ8gdfcEz4" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Únete y habla con nosotros</a>
                         </div>
                 </div>
