--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body id="page-top">
         <audio autoplay loop>
-            <source src="ruta-de-tu-audio.mp3" type="audio/mpeg">
+            <source src="assets/IronStrike.mp3" type="audio/mpeg">
             Tu navegador no soporta el elemento de audio.
         </audio>
         <!-- Navigation-->
@@ -203,6 +203,16 @@
                                 <h4 class="subheading">Primer prototipo del juego</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">Tras un mes de trabajo, se completa lo que conocemos como la versión prototipo de nuestro primer juego: ¡Project Paintball!</p></div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/LogoJuego.jpg" alt="..." /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>Noviembre 2024</h4>
+                                <h4 class="subheading">Primera beta de Project Paintball</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted">La primera beta de lo que será nuestro primer gran juego.</p></div>
                         </div>
                     </li>
                     <!-- SEGUIR INTRODUCIOENDO COSAS A MEDIDA QUE VAYAMOS AVANZANDO-->
