--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
                             <div class="timeline-body"><p class="text-muted">Tras un mes de trabajo, se completa lo que conocemos como la versión prototipo de nuestro primer juego: ¡Project Paintball!</p></div>
                         </div>
                     </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/LogoJuego.jpg" alt="..." /></div>
+                    <li class="timeline">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/portada-sq.png" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Noviembre 2024</h4>
