--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Project Paintball</h2>
                     <h3 class="section-subheading text-muted">Nuestro primer gran videojuego.</h3>
+                    <img class="img-fluid" src="portada.png" alt="..." />
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
