--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Project Paintball</h2>
                     <h3 class="section-subheading text-muted">Nuestro primer gran videojuego.</h3>
-                    <img class="img-fluid" src="assets/img/portada.png" alt="..." style="max-width: 30%; height: auto; display: block; margin: 0 auto;"/>
+                    <img class="img-fluid" src="assets/img/portada_full.png" alt="..." style="max-width: 30%; height: auto; display: block; margin: 0 auto;"/>
                     <br />
                     <br />
                 </div>
