--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="container">
                 <div class="masthead-subheading">Somos PsyCoffin</div>
                 <div class="masthead-heading text-uppercase">¡Gracias por visitarnos!</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Conócenos</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="https://p11-a03.itch.io/project-paintball-by-psycoffin">¡JUEGA YA!</a>
             </div>
         </header>
         <!-- Services-->
