--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/Antonio.jpg" alt="..." />
                             <h4>Antonio Ponce</h4>
                             <p class="text-muted">Programador</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://x.com/AntonioPOOONCE" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/antonio-ponce-hurtado-5124791a4/?originalSubdomain=es" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
